@@ -1,4 +1,4 @@
-# $Id: config.rb,v 1.57 2005-06-23 12:20:33 yanagita Exp $
+# $Id: config.rb,v 1.58 2005-06-24 09:06:10 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
@@ -56,6 +56,11 @@ module Hiki
       @bot =~ ENV['HTTP_USER_AGENT']
     end
 
+    def mobile_agent?
+      %r[(DoCoMo|J-PHONE|Vodafone|MOT-|UP\.Browser|DDIPOCKET|ASTEL|PDXGW|Palmscape|Xiino|sharp pda browser|Windows CE|L-mode)]i =~ ENV['HTTP_USER_AGENT']
+true
+    end
+
     #
     # get/set/delete plugin options
     #
@@ -101,7 +106,11 @@ module Hiki
     end
 
     def read_template( cmd )
-      template = File.join(@template_path, @template[cmd])
+      if mobile_agent?
+	template = File.join(@template_path, 'i.' + @template[cmd])
+      else
+	template = File.join(@template_path, @template[cmd])
+      end
       if FileTest.file?(template)
         File.read(template).untaint
       else
