@@ -1,0 +1,14 @@
+<html>
+<head>
+<%= @contents[:header] %>
+</head>
+<body>
+<div><%= @contents[:tools] %></div>
+<h1><%= @contents[:title] %></h1>
+<div>
+<% if @contents[:updatelist] %><ul>
+<% @contents[:updatelist].each do |i| %><li><%= i %></li><% end %>
+</ul><% end %>
+</div>
+</body>
+</html>
