@@ -1,0 +1,14 @@
+<html>
+<head>
+<%= @contents[:header] %>
+</head>
+<body>
+  <div><%= @contents[:tools] %></div>
+  <h1><%= @contents[:view_title] %></h1>
+  <% if !@contents[:body_enter].empty? %><div><%= @contents[:body_enter] %></div><% end %>
+  <div><%= @contents[:body] %></div>
+    <% unless @contents[:body_leave].empty? %><div><%= @contents[:body_leave] %></div><% end %>
+  </div>
+</div>
+</body>
+</html>
